[package]
name = "litepattern"
version = "0.1.0"
description = "Lightweight pattern matching library for Rust."
authors = ["Sam Saint-Pettersen <s.stpettersen+github@gmail.com>"]
readme = "README.md"
repository = "https://github.com/stpettersens/litepattern"
homepage = "https://github.com/stpettersens/litepattern"
documentation = "https://docs.rs/litepattern"
license = "MIT"
keywords = ["light", "pattern", "matching", "library"]
exclude = [".gitignore", ".travis.yml", "appveyor.yml"]
